--- a/NginxService/NginxService.csproj
+++ b/NginxService/NginxService.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-	<Reference Include="System.Core" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -47,8 +47,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Execute.cs" />
     <Compile Include="NginxController.cs" />
     <Compile Include="NginxExeLocator.cs" />
+    <Compile Include="NginxMasterProcess.cs" />
+    <Compile Include="NginxSignalProcess.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
